--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
                     <p><span class="logo-accent">Web</span>Studio</p>
                 </a>
                 <ul class="header-list list">
-                    <li class="header-list-item"><a href="./index.html" class="header-link link current">Студия</a></li>
+                    <li class="header-list-item">
+                        <a href="./index.html" class="header-link link current">Студия</a>
+                    </li>
                     <li class="header-list-item"><a href="./portfolio.html" class="header-link link">Портфолио</a></li>
                     <li class="header-list-item"><a href="" class="header-link link">Контакты</a></li>
                 </ul>
@@ -55,7 +57,7 @@
         <section class="hero">
             <div class="container hero-container">
                 <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-                <button type="button" class="button hero-button">Заказать услугу</button>
+                <button type="button" class="btn hero-button" data-modal-open>Заказать услугу</button>
             </div>
         </section>
         <!--направления работы-->
@@ -123,11 +125,23 @@
             <h2 class="occupation-title">Чем мы занимаемся</h2>
             <div class="container">
                 <ul class="occupation-list list">
-                    <li class="occupation-item"><img src="./images/box1.jpg" width="370" height="294" alt="разработка">
+                    <li class="occupation-item">
+                        <div class="container">
+                            <img src="./images/box1.jpg" width="370" height="294" alt="разработка">
+                            <p class="occupation-description">Десктопные приложения</p>
+                        </div>
                     </li>
-                    <li class="occupation-item"><img src="./images/box2.jpg" width="370" height="294" alt="дизайн">
+                    <li class="occupation-item">
+                        <div class="container">
+                            <img src="./images/box2.jpg" width="370" height="294" alt="дизайн">
+                            <p class="occupation-description">Мобильные приложения</p>
+                        </div>
                     </li>
-                    <li class="occupation-item"><img src="./images/box3.jpg" width="370" height="294" alt="графика">
+                    <li class="occupation-item">
+                        <div class="container">
+                            <img src="./images/box3.jpg" width="370" height="294" alt="графика">
+                            <p class="occupation-description">Дизайнерские решения</p>
+                        </div>
                     </li>
                 </ul>
             </div>
@@ -144,17 +158,17 @@
                         <h3 class="team-card-header">Игорь Демьяненко</h3>
                         <p class="team-card-occupation">Product Designer</p>
                         <div class="social-icons">
-                            <a href="" class="social-icon-bgd"><svg class="social-icon">
+                            <a href="" class="social-icon-bgd link"><svg class="social-icon">
                                     <use href="./images/icons.svg#icon-instagram" class="social-icon-pic"></use>
                                 </svg></a>
-                            <a href="" class="social-icon-bgd">
+                            <a href="" class="social-icon-bgd link">
                                 <svg class="social-icon">
                                     <use href="./images/icons.svg#icon-twitter" class="social-icon-pic"></use>
                                 </svg></a>
-                            <a href="" class="social-icon-bgd"><svg class="social-icon">
+                            <a href="" class="social-icon-bgd link"><svg class="social-icon">
                                     <use href="./images/icons.svg#icon-facebook" class="social-icon-pic"></use>
                                 </svg></a>
-                            <a href="" class="social-icon-bgd"><svg class="social-icon">
+                            <a href="" class="social-icon-bgd link"><svg class="social-icon">
                                     <use href="./images/icons.svg#icon-linkedin" class="social-icon-pic"></use>
                                 </svg></a>
                         </div>
@@ -165,17 +179,17 @@
                         <h3 class="team-card-header">Ольга Репина</h3>
                         <p class="team-card-occupation">Frontend Developer</p>
                         <div class="social-icons">
-                            <a href="" class="social-icon-bgd"><svg class="social-icon">
+                            <a href="" class="social-icon-bgd link"><svg class="social-icon">
                                     <use href="./images/icons.svg#icon-instagram" class="social-icon-pic"></use>
                                 </svg></a>
-                            <a href="" class="social-icon-bgd">
+                            <a href="" class="social-icon-bgd link">
                                 <svg class="social-icon">
                                     <use href="./images/icons.svg#icon-twitter" class="social-icon-pic"></use>
                                 </svg></a>
-                            <a href="" class="social-icon-bgd"><svg class="social-icon">
+                            <a href="" class="social-icon-bgd link"><svg class="social-icon">
                                     <use href="./images/icons.svg#icon-facebook" class="social-icon-pic"></use>
                                 </svg></a>
-                            <a href="" class="social-icon-bgd"><svg class="social-icon">
+                            <a href="" class="social-icon-bgd link"><svg class="social-icon">
                                     <use href="./images/icons.svg#icon-linkedin" class="social-icon-pic"></use>
                                 </svg></a>
                         </div>
@@ -186,17 +200,17 @@
                         <h3 class="team-card-header">Николай Тарасов</h3>
                         <p class="team-card-occupation">Marketing</p>
                         <div class="social-icons">
-                            <a href="" class="social-icon-bgd"><svg class="social-icon">
+                            <a href="" class="social-icon-bgd link"><svg class="social-icon">
                                     <use href="./images/icons.svg#icon-instagram" class="social-icon-pic"></use>
                                 </svg></a>
-                            <a href="" class="social-icon-bgd">
+                            <a href="" class="social-icon-bgd link">
                                 <svg class="social-icon">
                                     <use href="./images/icons.svg#icon-twitter" class="social-icon-pic"></use>
                                 </svg></a>
-                            <a href="" class="social-icon-bgd"><svg class="social-icon">
+                            <a href="" class="social-icon-bgd link"><svg class="social-icon">
                                     <use href="./images/icons.svg#icon-facebook" class="social-icon-pic"></use>
                                 </svg></a>
-                            <a href="" class="social-icon-bgd"><svg class="social-icon">
+                            <a href="" class="social-icon-bgd link"><svg class="social-icon">
                                     <use href="./images/icons.svg#icon-linkedin" class="social-icon-pic"></use>
                                 </svg></a>
                         </div>
@@ -207,17 +221,17 @@
                         <h3 class="team-card-header">Михаил Ермаков</h3>
                         <p class="team-card-occupation">UI Designer</p>
                         <div class="social-icons">
-                            <a href="" class="social-icon-bgd"><svg class="social-icon">
+                            <a href="" class="social-icon-bgd link"><svg class="social-icon">
                                     <use href="./images/icons.svg#icon-instagram" class="social-icon-pic"></use>
                                 </svg></a>
-                            <a href="" class="social-icon-bgd">
+                            <a href="" class="social-icon-bgd link">
                                 <svg class="social-icon">
                                     <use href="./images/icons.svg#icon-twitter" class="social-icon-pic"></use>
                                 </svg></a>
-                            <a href="" class="social-icon-bgd"><svg class="social-icon">
+                            <a href="" class="social-icon-bgd link"><svg class="social-icon">
                                     <use href="./images/icons.svg#icon-facebook" class="social-icon-pic"></use>
                                 </svg></a>
-                            <a href="" class="social-icon-bgd"><svg class="social-icon">
+                            <a href="" class="social-icon-bgd link"><svg class="social-icon">
                                     <use href="./images/icons.svg#icon-linkedin" class="social-icon-pic"></use>
                                 </svg></a>
                         </div>
@@ -233,42 +247,42 @@
             <div class="container">
                 <ul class="partners-list">
                     <li class="partners-list-item">
-                        <a href="" class="partners-list-link">
+                        <a href="" class="partners-list-link link">
                             <svg class="icon">
                                 <use href="./images/icons.svg#icon-logo-1"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="partners-list-item">
-                        <a href="" class="partners-list-link">
+                        <a href="" class="partners-list-link link">
                             <svg class="icon">
                                 <use href="./images/icons.svg#icon-logo-2"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="partners-list-item">
-                        <a href="" class="partners-list-link">
+                        <a href="" class="partners-list-link link">
                             <svg class="icon">
                                 <use href="./images/icons.svg#icon-logo-3"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="partners-list-item">
-                        <a href="" class="partners-list-link">
+                        <a href="" class="partners-list-link link">
                             <svg class="icon">
                                 <use href="./images/icons.svg#icon-logo-4"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="partners-list-item">
-                        <a href="" class="partners-list-link">
+                        <a href="" class="partners-list-link link">
                             <svg class="icon">
                                 <use href="./images/icons.svg#icon-logo-5"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="partners-list-item">
-                        <a href="" class="partners-list-link">
+                        <a href="" class="partners-list-link link">
                             <svg class="icon">
                                 <use href="./images/icons.svg#icon-logo-6"></use>
                             </svg>
@@ -299,23 +313,25 @@
             <div class="footer-social-block">
                 <strong class="footer-icons-list">присоединяйтесь</strong>
                 <div class="footer-social-icons">
-                    <a href="" class="footer-social-icon-bgd"><svg class="footer-social-icon">
+                    <a href="" class="footer-social-icon-bgd link"><svg class="footer-social-icon">
                             <use href="./images/icons.svg#icon-instagram" class="footer-social-icon-pic"></use>
                         </svg></a>
-                    <a href="" class="footer-social-icon-bgd">
+                    <a href="" class="footer-social-icon-bgd link">
                         <svg class="footer-social-icon">
                             <use href="./images/icons.svg#icon-twitter" class="footer-social-icon-pic"></use>
                         </svg></a>
-                    <a href="" class="footer-social-icon-bgd"><svg class="footer-social-icon">
+                    <a href="" class="footer-social-icon-bgd link"><svg class="footer-social-icon">
                             <use href="./images/icons.svg#icon-facebook" class="footer-social-icon-pic"></use>
                         </svg></a>
-                    <a href="" class="footer-social-icon-bgd"><svg class="footer-social-icon">
+                    <a href="" class="footer-social-icon-bgd link"><svg class="footer-social-icon">
                             <use href="./images/icons.svg#icon-linkedin" class="footer-social-icon-pic"></use>
                         </svg></a>
                 </div>
             </div>
         </div>
     </footer>
+    <!-- модальное окно -->
+    <script src="./js/modal.js"></script>
 </body>
 
 </html>
