--- a/portfolio.html
+++ b/portfolio.html
@@ -26,9 +26,12 @@
                     <p><span class="logo-accent">Web</span>Studio</p>
                 </a>
                 <ul class="header-list list">
-                    <li class="header-list-item"><a href="./index.html" class="header-link link">Студия</a></li>
-                    <li class="header-list-item"><a href="./portfolio.html"
-                            class="header-link link current">Портфолио</a></li>
+                    <li class="header-list-item">
+                        <a href="./index.html" class="header-link link">Студия</a>
+                    </li>
+                    <li class="header-list-item">
+                        <a href="./portfolio.html" class="header-link link current">Портфолио</a>
+                    </li>
                     <li class="header-list-item"><a href="" class="header-link link">Контакты</a></li>
                 </ul>
             </nav>
@@ -58,19 +61,19 @@
                 <!-- фильтр -->
                 <ul class="list portfolio-filter">
                     <li class="portfolio-list-item">
-                        <button type="button" class="portfolio-button">Все</button>
+                        <button type="button" class="portfolio-button btn">Все</button>
                     </li>
                     <li class="portfolio-list-item">
-                        <button type="button" class="portfolio-button">Веб-сайты</button>
+                        <button type="button" class="portfolio-button btn">Веб-сайты</button>
                     </li>
                     <li class="portfolio-list-item">
-                        <button type="button" class="portfolio-button">Приложения</button>
+                        <button type="button" class="portfolio-button btn">Приложения</button>
                     </li>
                     <li class="portfolio-list-item">
-                        <button type="button" class="portfolio-button">Дизайн</button>
+                        <button type="button" class="portfolio-button btn">Дизайн</button>
                     </li>
                     <li class="portfolio-list-item">
-                        <button type="button" class="portfolio-button">Маркетинг</button>
+                        <button type="button" class="portfolio-button btn">Маркетинг</button>
                     </li>
                 </ul>
             </div>
