всплывающие окна на примерах работ

--- a/index.html
+++ b/index.html
@@ -126,19 +126,19 @@
             <div class="container">
                 <ul class="occupation-list list">
                     <li class="occupation-item">
-                        <div class="container">
+                        <div class="thumb">
                             <img src="./images/box1.jpg" width="370" height="294" alt="разработка">
                             <p class="occupation-description">Десктопные приложения</p>
                         </div>
                     </li>
                     <li class="occupation-item">
-                        <div class="container">
+                        <div class="thumb">
                             <img src="./images/box2.jpg" width="370" height="294" alt="дизайн">
                             <p class="occupation-description">Мобильные приложения</p>
                         </div>
                     </li>
                     <li class="occupation-item">
-                        <div class="container">
+                        <div class="thumb">
                             <img src="./images/box3.jpg" width="370" height="294" alt="графика">
                             <p class="occupation-description">Дизайнерские решения</p>
                         </div>
