--- a/portfolio.html
+++ b/portfolio.html
@@ -83,8 +83,13 @@
                 <ul class="works list">
                     <li class="works-list-item">
                         <a href="" class="link">
-                            <img src="./images/works-img1.jpg" width="370" height="294" alt="Сайт Технокряк"
-                                class="portfolio-img">
+                            <div class="thumb">
+                                <img src="./images/works-img1.jpg" width="370" height="294" alt="Сайт Технокряк"
+                                    class="portfolio-img">
+                                <p class="works-card-description">Технокряк это современная площадка распространения
+                                    коронавируса. Компании используют эту платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                             <div class="project-name-description">
                                 <h3 class="works-header">Технокряк</h3>
                                 <p class="works-text">Веб-сайт</p>
@@ -93,18 +98,29 @@
                     </li>
                     <li class="works-list-item">
                         <a href="" class="link">
-                            <img src="./images/works-img2.jpg" width="370" height="294" alt="Дизайн постера"
-                                class="portfolio-img">
+                            <div class="thumb">
+                                <img src="./images/works-img2.jpg" width="370" height="294" alt="Дизайн постера"
+                                    class="portfolio-img">
+                                <p class="works-card-description">Технокряк это современная площадка распространения
+                                    коронавируса. Компании используют эту платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                             <div class="project-name-description">
-                                <h3 class="works-header">Постер <span lang="en">New Orlean vs Golden Star</span></h3>
+                                <h3 class="works-header">Постер <span lang="en">New Orlean vs Golden Star</span>
+                                </h3>
                                 <p class="works-text">Дизайн</p>
                             </div>
                         </a>
                     </li>
                     <li class="works-list-item">
                         <a href="" class="link">
-                            <img src="./images/works-img3.jpg" width="370" height="294" alt="Приложение ресторана"
-                                class="portfolio-img">
+                            <div class="thumb">
+                                <img src="./images/works-img3.jpg" width="370" height="294" alt="Приложение ресторана"
+                                    class="portfolio-img">
+                                <p class="works-card-description">Технокряк это современная площадка распространения
+                                    коронавируса. Компании используют эту платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                             <div class="project-name-description">
                                 <h3 class="works-header">Ресторан <span lang="en">Seafood</span></h3>
                                 <p class="works-text">Приложение</p>
@@ -113,8 +129,13 @@
                     </li>
                     <li class="works-list-item">
                         <a href="" class="link">
-                            <img src="./images/works-img4.jpg" width="370" height="294" alt="Маркетинговый проект"
-                                class="portfolio-img">
+                            <div class="thumb">
+                                <img src="./images/works-img4.jpg" width="370" height="294" alt="Маркетинговый проект"
+                                    class="portfolio-img">
+                                <p class="works-card-description">Технокряк это современная площадка распространения
+                                    коронавируса. Компании используют эту платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                             <div class="project-name-description">
                                 <h3 class="works-header">Проект <span lang="en">Prime</span></h3>
                                 <p class="works-text">Маркетинг</p>
@@ -123,8 +144,13 @@
                     </li>
                     <li class="works-list-item">
                         <a href="" class="link">
-                            <img src="./images/works-img5.jpg" width="370" height="294" alt="Приложение"
-                                class="portfolio-img">
+                            <div class="thumb">
+                                <img src="./images/works-img5.jpg" width="370" height="294" alt="Приложение"
+                                    class="portfolio-img">
+                                <p class="works-card-description">Технокряк это современная площадка распространения
+                                    коронавируса. Компании используют эту платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                             <div class="project-name-description">
                                 <h3 class="works-header">Проект <span lang="en">Boxes</span></h3>
                                 <p class="works-text">Приложение</p>
@@ -133,8 +159,13 @@
                     </li>
                     <li class="works-list-item">
                         <a href="" class="link">
-                            <img src="./images/works-img6.jpg" width="370" height="294" alt="Веб-сайт"
-                                class="portfolio-img">
+                            <div class="thumb">
+                                <img src="./images/works-img6.jpg" width="370" height="294" alt="Веб-сайт"
+                                    class="portfolio-img">
+                                <p class="works-card-description">Технокряк это современная площадка распространения
+                                    коронавируса. Компании используют эту платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                             <div class="project-name-description">
                                 <h3 class="works-header"><span lang="en">Inspiration has no Borders</span></h3>
                                 <p class="works-text">Веб-сайт</p>
@@ -143,8 +174,13 @@
                     </li>
                     <li class="works-list-item">
                         <a href="" class="link">
-                            <img src="./images/works-img7.jpg" width="370" height="294" alt="Дизайн издания"
-                                class="portfolio-img">
+                            <div class="thumb">
+                                <img src="./images/works-img7.jpg" width="370" height="294" alt="Дизайн издания"
+                                    class="portfolio-img">
+                                <p class="works-card-description">Технокряк это современная площадка распространения
+                                    коронавируса. Компании используют эту платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                             <div class="project-name-description">
                                 <h3 class="works-header">Издание <span lang="en">Limited Edition</span></h3>
                                 <p class="works-text">Дизайн</p>
@@ -152,18 +188,29 @@
                         </a>
                     </li>
                     <li class="works-list-item">
-                        <a href="" class="link"><img src="./images/works-img8.jpg" width="370" height="294"
-                                alt="Маркетинговый проект" class="portfolio-img">
+                        <a href="" class="link">
+                            <div class="thumb">
+                                <img src="./images/works-img8.jpg" width="370" height="294" alt="Маркетинговый проект"
+                                    class="portfolio-img">
+                                <p class="works-card-description">Технокряк это современная площадка распространения
+                                    коронавируса. Компании используют эту платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                             <div class="project-name-description">
                                 <h3 class="works-header">Проект <span lang="en">LAB</span></h3>
-
                                 <p class="works-text">Маркетинг</p>
                             </div>
                         </a>
                     </li>
                     <li class="works-list-item">
-                        <a href="" class="link"><img src="./images/works-img9.jpg" width="370" height="294"
-                                alt="Приложение" class="portfolio-img">
+                        <a href="" class="link">
+                            <div class="thumb">
+                                <img src="./images/works-img9.jpg" width="370" height="294" alt="Приложение"
+                                    class="portfolio-img">
+                                <p class="works-card-description">Технокряк это современная площадка распространения
+                                    коронавируса. Компании используют эту платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                             <div class="project-name-description">
                                 <h3 class="works-header"><span lang="en">Growing Business</span></h3>
                                 <p class="works-text">Приложение</p>
