--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
             <button class="modal-btn" data-modal-close>
-                <svg class="close-ico">
+                <svg type="button" class="close-ico" width="18px" height="18px">
                     <use src="/images/icons.svg#close"></use>
                 </svg>
             </button>
