--- a/index.html
+++ b/index.html
@@ -333,14 +333,14 @@
     <!-- модальное окно -->
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
-            <button class="modal-btn" data-modal-close>
-                <svg type="button" class="close-ico" width="18px" height="18px">
-                    <use src="/images/icons.svg#close"></use>
+            <button type="button" class="modal-btn" data-modal-close>
+                <svg width="18px" height="18px">
+                    <use src="/images/icons.svg#close" class="close-ico"></use>
                 </svg>
             </button>
         </div>
     </div>
-    <script href="./js/modal.js"></script>
+    <script src="./js/modal.js"></script>
 </body>
 
 </html>
