--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <section class="hero">
             <div class="container hero-container">
                 <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-                <button type="button" class="btn hero-button" data-modal-open>Заказать услугу</button>
+                <button class="btn hero-button" data-modal-open type="button">Заказать услугу</button>
             </div>
         </section>
         <!--направления работы-->
@@ -333,9 +333,9 @@
     <!-- модальное окно -->
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
-            <button type="button" class="modal-btn" data-modal-close>
-                <svg width="18px" height="18px">
-                    <use src="/images/icons.svg#close" class="close-ico"></use>
+            <button type="button" class="close-btn" data-modal-close>
+                <svg width="18px" height="18px" class="close-svg">
+                    <use href="./images/icons.svg#icon-close" class="close-ico"></use>
                 </svg>
             </button>
         </div>
