нашел, почему мыло не активно)

--- a/portfolio.html
+++ b/portfolio.html
@@ -37,7 +37,7 @@
             </nav>
             <ul class="header-contacts list">
                 <li class="header-contacts-item mail">
-                    <a href="maito:info@devstudio.com" class="header-link link">
+                    <a href="mailto:info@devstudio.com" class="header-link link">
                         <svg width="16" height="12" class="contact-icon">
                             <use href="./images/icons.svg#icon-envelope" class="ico"></use>
                         </svg>
